--- a/css/style.css
+++ b/css/style.css
@@ -1,233 +1,81 @@
-#header {
-    display: block;
-    width: 1100px;
-    margin: 0 auto;
-    overflow: auto;
-}
-
-#photo {
-    float: left;
-    width: 300px;
-    /* height: 200px; */
-    /* border-radius: 50%; */
-    margin: 30px 0px 0px 40px;
-    vertical-align: middle;
-}
-
-.options {
-    width: 100px;
-    float: right;
-    padding-left: 50px;
-    text-align: right;
-}
-.bio {
-    float: left;
-    margin: 0px 50px 0px 50px;
-    width: 300px;
-}
-
-.flowlist {
-    overflow: auto;
-    height: 300px;
-}
-
-article {
-    display: block;
-    margin: 0px 50px 0px 50px;
-    max-width: 1100px;
-}
-
-.top-header {
-    text-align: left;
-}
-
-a {
-    border-bottom: 1px dotted #848484;
-    text-decoration: none;
-    /* color: #1772d0; */
-    color: inherit;
-    /* line-height: 1.3em; */
-    /* font-size:1em; */
-}
-
-/* u {
-    border-bottom: 1px dotted #848484;
-    text-decoration: none;
-} */
-
-/* a:hover {
-    text-decoration: underline;
-  } */
-
-.bottom-links {}
-
-main {
-    background-color: #fff;
-    width: 1100px;
-    margin: auto
-}
-
-.backemail {
-    unicode-bidi: bidi-override;
-    direction: rtl;
-}
-
-ol {
-    list-style-type: none;
-    padding-left: 20px;
-}
-
-
-.half {
-    width: 42%
-}
-
-.margin30 {
-    margin: 30px 30px 0px 30px;
-}
-
-.margin50 {
-    margin: 0px 50px 0px 50px;
-}
-
+/* Base styling */
 body {
     font-family: 'Lora', serif;
+    line-height: 1.6;
+    max-width: 900px;
+    margin: 40px auto;
+    padding: 0 20px;
+    color: #222;
+    background: #fff;
 }
 
-.pad20 {
-    float: left;
-    padding: 20px 30px 0px 50px;
-}
-
-.dtable {
-    display: table;
-    width: inherit;
-}
-
-@media only screen and (max-width: 1100px) {
-
-    /* For mobile phones: */
-    #photo {
-        float: none;
-        width: 250px;
-        display: block;
-        margin: 0 auto;
-    }
-
-    #header {
-        width: auto;
-    }
-
-    article {
-        margin: auto;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-    body {
-        margin: auto
-    }
-
-    .dtable {
-        display: block;
-        width: inherit;
-    }
-
-    .pad20 {
-        float: none;
-        padding: 20px 30px 0px 0px;
-    }
-
-    .margin30 {
-        margin: 0px 0px 30px 0px;
-    }
-
-    .margin50 {
-        margin: auto;
-    }
-
-    .hidden {
-        display: none;
-    }
-
-    .top-header {
-        text-align: center;
-    }
-
-    .bottom-links {
-        text-align: center;
-    }
-
-    .bio {
-        display: block;
-        margin: 0 auto;
-        text-align: left;
-        float: none;
-        width: auto;
-    }
-
-    .half {
-        width: 100%
-    }
-
-    .flowlist {
-        overflow: auto;
-        height: auto;
-    }
-
-    main {
-        width: auto
-    }
-}
-
-html {
-    background-color: #FFFFFF;
-}
-
-p,
-span {
-    color: #000000;
+/* Headings */
+h1, h2 {
+    font-weight: 600;
+    margin-bottom: 0.5em;
 }
 
 h1 {
-    color: #202124;
-    font-weight: 500;
-    margin: 0rem 0 .5rem;
+    font-size: 2em;
+    text-align: center;
 }
 
-#research {
-    margin-right: 250px;
-    height: 200px;
+h2 {
+    font-size: 1.4em;
+    margin-top: 1.2em;
 }
 
-.time {
-    color: rgb(20, 90, 10);
+/* Instructor info */
+.instructor {
+    font-style: italic;
+    margin-bottom: 1em;
+    text-align: center;
 }
 
-.margin-left {
-    margin-left: 10px;
+/* Layout for intro section */
+.intro {
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+    margin: 30px 0;
 }
 
-.place {
-    color: #428bca;
-}
-
-.image {
-    float: left;
-    max-width: 200px;
-    max-height: 200px;
-    width: auto;
+/* Instructor photo */
+.instructor-photo {
+    width: 200px;
     height: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
 }
 
-.description {
-    margin-left: 220px;
+/* Course about text */
+.course-about {
+    flex: 1;
 }
 
-.clearfix {
-    overflow: auto;
+/* Lists */
+ul {
+    margin: 0.5em 0 1em 1.5em;
 }
 
-i {
-    font-weight: 400;
+/* CTA */
+.cta {
+    margin: 2em 0;
+    text-align: center;
+    font-weight: bold;
+}
+
+.cta a {
+    display: inline-block;
+    margin-top: 10px;
+    background: #004080;
+    color: #fff;
+    padding: 10px 18px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.cta a:hover {
+    background: #002d5a;
 }
