--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,11 @@ ul li::before {
 }
 
 
+/* Footer  */
+.visually-hidden {
+    position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px;
+    overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0;
+  }
 /* --- Responsive Design --- */
 @media (max-width: 900px) {
     .container {
@@ -243,3 +248,4 @@ ul li::before {
         grid-template-columns: 1fr;
     }
 }
+
